# s1

./: .gitignore  apptainer.def  build_apptainer.sh  plot_quantize_results.py  pyproject.toml  run_Qwen2.5-32B-Instruct-AWQ.sub  run_Qwen2.5-32B-Instruct-GPTQ-Int4.sub  run_Qwen2.5-32B-Instruct-GPTQ-Int8.sub  run_s1-32B.sub  run_s1.1-32B.sub  run_s1.1-7B-awq.sub  run_s1.1-7B-gptq-int4.sub  run_s1.1-7B-gptq-int8.sub  run_s1.1-7B.sub  run_s1.sub  visualize_aime24.py
