[project]
name = "s1-scaling-eval"
version = "0.1.0"
description = "Evaluation for test-time scaling on reasoning tasks (AIME24, MATH500, GPQA, Diamond)"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[project.optional-dependencies]
dev = ["black", "isort", "pytest"]
math = []
vllm = []

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
